# generate_bes_from_template

./: .build.sh  .flake8  .gitconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  BES_CONFIG.py.template  LICENSE  MSI_to_BES.py  README.md  action_createfile_from_file.py  action_prefetch_from_template.py  generate-bes-from-template.py  generate_bes_from_template.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yaml  flake8.yaml  pre-commit.yaml  pylint.yaml  pylint.yml  tag_and_release.yaml  test_pip.yaml  test_src.yaml  yamllint.yaml
examples/: BES.xsd  BIOS_from_dell_catalog.py  Example-Win-Install-MSI.bes.mustache  Example-Win-InstallUpdate-MSI.bes.mustache  Example-Win-Update-MSI.bes.mustache  TEMPLATE_Event_Logs_Retain-LOG-Windows.bes  TEMPLATE_Event_Logs_Retain-LOG-Windows.py  TEMPLATE_TASK.bes  Uninstall_ MSI - Windows.bes  Uninstall_ MSI - Windows.bes.mustache  Uninstall_EXE-Windows.bes.mustache  __init__.py  example_generate_msi_content.py  generate_msi_uninstallers.py  generate_uninstallers.py  task_example_data.py
src/generate_bes_from_template/: MSI_to_BES.py  __init__.py  action_createfile_from_file.py  action_prefetch_from_template.py  generate_bes_from_template.py
tests/: TemplateExample.mustache  tests.py
tests/.partials/: TemplatePartialFolderExample.mustache
