[metadata]
name = generate-bes-from-template
version = 0.0.1
author = JGStew
author_email = noreply@jgstew.com
description = A python module for generating BigFix content
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgstew/generate_bes_from_template
project_urls =
    Bug Tracker = https://github.com/jgstew/generate_bes_from_template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
    lxml

[options.packages.find]
where = src
