[metadata]
name = generate-bes-from-template
version = 0.0.5
author = JGStew
author_email = noreply@jgstew.com
description = A python module for generating BigFix content
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgstew/generate_bes_from_template
project_urls =
    Bug Tracker = https://github.com/jgstew/generate_bes_from_template/issues
    Source = https://github.com/jgstew/generate_bes_from_template/tree/master/src/generate_bes_from_template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
    lxml


[options.package_data]
* =
    TEMPLATE_TASK.bes.mustache

[options.packages.find]
where = src
