[metadata]
name = generate-bes-from-template
version = 0.0.9
author = JGStew
author_email = noreply@jgstew.com
description = A python module for generating BigFix content
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bigfix bes fixlet relevance xml
license = MIT
license_file = LICENSE.txt
url = https://github.com/jgstew/generate_bes_from_template
project_urls =
    Bug Tracker = https://github.com/jgstew/generate_bes_from_template/issues
    Source = https://github.com/jgstew/generate_bes_from_template/tree/master/src/generate_bes_from_template
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration


[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
    chevron


[options.package_data]
* =
    TEMPLATE_TASK.bes.mustache

[options.packages.find]
where = src
